// Vitest Snapshot v1

exports[`[vuecli] subscribe module > dist files output [cold mode] 1`] = `
[
  "element-plus/es",
  "element-plus/es/components/button/style/css",
  "vue",
]
`;

exports[`[vuecli] subscribe module > dist files output [hot mode] 1`] = `
[
  "element-plus/es",
  "element-plus/es/components/button/style/css",
  "vue",
  "dubhe-viteout/test",
  "dubhe-viteout/hello",
  "dubhe-viteout/app",
]
`;
